# monocle

./: .ruff.toml  AGENTS.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: textual-workers-api.md
.planning/debug/resolved/: acli-whoami-unknown-command.md  concurrent-cli-fetching.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-02-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-cli-adapters/: 02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-dashboard-ui/: 03-03-SUMMARY.md  03-04-PLAN.md  03-05-PLAN.md  03-07-SUMMARY.md
.planning/phases/04-add-logging/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-github-integration/: 05-01-PLAN.md  05-02-PLAN.md
src/monocli/: __main__.py  exceptions.py  models.py
src/monocli/db/: cache.py  connection.py
src/monocli/sources/: __init__.py  base.py  registry.py
src/monocli/sources/github/: __init__.py
src/monocli/sources/gitlab/: __init__.py
src/monocli/sources/jira/: __init__.py  _cli.py
src/monocli/sources/todoist/: __init__.py
src/monocli/ui/: __init__.py  app.py  main_screen.py  sections.py  sorting.py
tests/ui/: __init__.py  test_main_screen.py  test_navigation.py  test_sections.py  test_spinner.py
